contrast fix

--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ body {
 }
 
 .hr5 {
-  color: gray;
+    color: var(--black-500);
 }
 
 .card p{
